# proquest-dl

./: .gitignore  README.md  jupytext.toml  pyproject.toml  requirements.txt
proquest_dl/: Article.py  Issue.py  ProQuestWebScraper.py  pdfbookmarker.py  proquest_dl.py
src/: Article.py  Issue.py  ProQuestWebScraper.py  economist-scraper.py  proquest-dl.py
